    - Upcrafting Pentapod Eggs and Bacteria now only requires additional nutrients/bioflux/water, as they take less inputs than outputs.
    - And of course the same logic applies to all the asteroid processing and all self-referential recipes from mods as well.
---------------------------------------------------------------------------------------------------
Version: 1.1.2
  Changes:
  - Fix errors from entities that aren't placable by anything. (Mod compatiblity.)
---------------------------------------------------------------------------------------------------
Version: 1.1.1
  Changes:
  - Fix typo in copying placeable_by.
---------------------------------------------------------------------------------------------------
Version: 1.1.0
  Features:
  - The total cost increase and time increase is now displayed on the crafting machine.
  - Implement Setting Copy & Paste for machines with differing amounts of Quality modules.
  - Explicitly hide upcrafting recipes from Signal UI.
  Changes:
  - More robust code to detect the correct placeable_by property. (Better mod compatiblity.)
  - More robust entity replacement:
    - Fix some crafting machines not keeping their rotation when inserting/removing quality modules.
    - Fix losing modules when selecting recipe that is incompatible with said module.
    - Flush fluids when adding/removing quality modules so that they don't get lost.
---------------------------------------------------------------------------------------------------
Version: 1.0.5
  Changes:
  - Experimental fix for mod incompabtiblity.
---------------------------------------------------------------------------------------------------
Version: 1.0.4
  Changes:
  - Fix recyling recipes not being unlocked.
---------------------------------------------------------------------------------------------------
Version: 1.0.3
  Changes:
  - Hide upcrafting recipe unlocks on technology UI.