@@ -7,5 +7,5 @@
   "homepage": "https://www.factorio.com",
   "dependencies": ["base >= 2.0.0", "quality >= 2.0.0", "space-age >= 2.0.0"],
   "quality_required": true,
-  "factorio_version": "2.0"
+  "factorio_version": "2.0.11"
 }
